# corpus

./: .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  Dockerfile  README.md  dev-docker-compose.yml  django.env.example  docker-compose.yml  env.example  mariadb.env.example  prod-docker-compose.yml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.md  BUG-REPORT.yaml  NEW-FEATURE.md  NEW-FEATURE.yaml  config.yml
.github/workflows/: django_tests.yml  pre_deployment_test.yml
backend/: Dockerfile  README.md  dev-Dockerfile  manage.py  pyproject.toml  requirements.txt  start.sh
backend/accounts/: backend.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: serializers.py
backend/config/migrations/: 0001_initial.py
backend/corpus/: asgi.py  base_url.py  constants.py  settings.py  urls.py  validators.py  wsgi.py
corpus/: Dockerfile  config_db.json  constants.py  core_posts.json  deploy_test.py  dev-Dockerfile  dev_accounts_db.json  dev_pages_db.json  dummydata.json  env.example  environment.yml  node-Dockerfile  package-lock.json  package.json  requirements.txt  script.py  start.sh  start_dev.sh  start_livecycle.sh  tailwind.config.js  teampage_users.json
corpus/accounts/: admin.py  authors_data.json  backend.py  forms.py  (+5 more)
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
nginx/: Dockerfile  default.conf
scripts/: .env.example  backup.cron  backup.sh
(+462 files in other folders)
